RELEASE_NOTES.TXT -  NPOESS Preparatory Project (NPP) Tropical Cyclone (TC) Science Algorithm (SA) RELEASE_NOTES.TXT file
             
Author: Scott Longmore, Cooperative Institute for Research in the Atmosphere (CIRA) 
Contact: Scott.Longmore@colostate.edu
Last Edit: 2017-09-25

2017/09/25  v2.0.1 - Fix for query file gather for correct ordered files, scaling/offset/missing values corrections 
2017/07/10  v2.0.0 - New python driver (mirs_tc.py), new data pool (scripts/python/pool), new operat (src/operat) 
2015/05/15  v1.5.4 - Removed legacy version of nbevs routine insrc/oparet/nbevs.f90, updated besubs.f90 
2015/05/15  v1.5.3 - OPERATIONAL RELEASE
                   - Logging update requested by NDE, WARNING issued when pool_query.py finds no matching records,d
                     sub-programs that exit normally but do not produce output produce WARNING. 
                   - QC.TXT link issues for multiple storms fixed
                   - oparet coefficients updated, minor updates
                   - JPSS satellite variables (for future) commented out
2015/02/02  v1.5.2 - GFS file naming update 
2014/12/10  v1.5.1 - oparet fix for SH storms
                     ShortTermTrack fix for invest storms (missing positions)
                     netCDF global attribute fixes/updates 
2014/11/09  v1.5.0 - Added ATMS QC > 1 for +20% of retrievals, exits algorithm 
                   - Fix for M12 of ShortTermTrack to current synoptic time
                   - ATMS time windows adjusted, gettimes.sh replaced with datetimes.py
		   - XYA/RZA netCDF CF compliance fixes, standard names, valid range, units
		   - JTWC ATCF/FIX filename convention added to products
                   - npp_tc.py scheduler added, eventually will replace master script NPP_TC.sh
2014/07/30  v1.4.2 - Problems with new graphics code on newer ATMS MIRS data 
                     reverted to previous version of plotting code